Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-32282

Galera node remains paused after interleaving FTWRLs

    XMLWordPrintable

Details

    Description

      After having two clients running FLUSH TABLES WITH READ LOCK/UNLOCK TABLES against Galera node, the node sometimes gets stuck in paused state causing following queries to fail, e.g.

      ER_UNKNOWN_COM_ERROR (1047): Aborting TOI: Replication paused on node for FTWRL/BACKUP STAGE.
      

      The attached patch contains required sync points and a test case to reproduce the problem.

      Attachments

        Activity

          People

            sysprg Julius Goryavsky (Inactive)
            teemu.ollakka Teemu Ollakka
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.